--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,9 @@
 spring.application.name=messaging
 server.port=5000
 
+email.service.base-url=${EMAIL_URL}
+email.service.base-path=${EMAIL_PATH}
+
 spring.datasource.url=${DATABASE_URL}
 spring.datasource.username=${DATABASE_USERNAME}
 spring.datasource.password=${DATABASE_PASSWORD}
